@@ -21,7 +21,6 @@ import java.net.URISyntaxException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.HashMap;
@@ -2017,9 +2016,8 @@ public class STACService extends Application {
 		for (String assetToRemove : assetToBeRemovedList) {
 			//Assets are populated from Feature in step Add_ALL_ASSET (so first validate if it still needs removal
 			assetObj = featureContext.read(assetToRemove);
-			if(assetObj instanceof JSONObject)
+			if(assetObj instanceof JSONObject assetJSONObj)
 			{
-				JSONObject assetJSONObj = (JSONObject)assetObj;
 				if(assetJSONObj.getAsString("href").contains("$."))// Still JSON path from stac-item.json
 					featureContext.delete(assetToRemove);
 			}
@@ -2138,7 +2136,7 @@ public class STACService extends Application {
 	public String readResourceFile(String path, HttpServletRequest hsr) throws IOException, URISyntaxException {
 		ResourcePath rp = new ResourcePath();
 		URI uri = rp.makeUrl(path).toURI();
-		String filedataString = new String(Files.readAllBytes(Paths.get(uri)), "UTF-8");
+		String filedataString = new String(Files.readAllBytes(java.nio.file.Path.of(uri)), "UTF-8");
 
 		if (filedataString != null)
 			filedataString = filedataString.trim();
